--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "svelte": "^4.2.18",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "svelte-awesome": "^3.3.4"
   }
 }
